# cpp-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: Something.h
src/: Main.cpp
test/: test1.cpp
